--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/FE-star/exercise1/issues"
   },
-  "homepage": "https://github.com/FE-star/exercise1#readme"
+  "homepage": "https://github.com/FE-star/exercise1#readme",
+  "directories": {
+    "test": "test"
+  }
 }
